Content changes for US967

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Candidate.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Candidate.cshtml
@@ -11,7 +11,7 @@
 }
 
 <h1 class="heading-xlarge">
-    My applications - @Model.CandidateName
+    My applications (@Model.CandidateName)
 </h1>
 
 @if (!(Model.CandidateApprenticeshipApplications.Any() || Model.CandidateTraineeshipApplications.Any()))
