--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_ApplicationsLink.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_ApplicationsLink.cshtml
@@ -1,9 +1,10 @@
-﻿@using SFA.Apprenticeships.Web.Recruit.Constants
+﻿@using SFA.Apprenticeships.Domain.Entities.Vacancies
+@using SFA.Apprenticeships.Web.Recruit.Constants
 @model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy.ApplicationsLinkViewModel
 
 @if (Model.ApplicationCount > 0)
 {
     <p>
-        <a href="@Url.RouteUrl(RecruitmentRouteNames.VacancyApplications, new { vacancyReferenceNumber = Model.VacancyReferenceNumber })">Applications for apprenticeship</a>
+        <a href="@Url.RouteUrl(RecruitmentRouteNames.VacancyApplications, new {vacancyReferenceNumber = Model.VacancyReferenceNumber})">Applications for @(Model.VacancyType == VacancyType.Traineeship ? "traineeship" : "apprenticeship")</a>
     </p>
 }
