--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_ApplicationsLink.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_ApplicationsLink.cshtml
@@ -1,4 +1,4 @@
-﻿@using SFA.Apprenticeships.Domain.Entities.Vacancies
+﻿@using SFA.Apprenticeships.Domain.Entities.Raa.Vacancies
 @using SFA.Apprenticeships.Web.Recruit.Constants
 @model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy.ApplicationsLinkViewModel
 
