--- a/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/_Apply.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/_Apply.cshtml
@@ -4,7 +4,7 @@
 @model SFA.Apprenticeships.Web.Manage.ViewModels.CandidateVacancy
 
 <p id="date-applied" class="no-btm-margin">
-    @if (Model.Application.Status == ApplicationStatuses.Draft)
+    @if (Model.Application.Status == ApplicationStatuses.Saved || Model.Application.Status == ApplicationStatuses.Draft)
     {
         <span>Draft created on @Html.DisplayFor(m => m.Application.DateCreated, "Date").</span>
     }
