--- a/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
@@ -1,4 +1,5 @@
 ﻿@using SFA.Apprenticeships.Web.Manage.Constants
+@using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy
 @model SFA.Apprenticeships.Web.Manage.ViewModels.HomeViewModel
 
 @{
@@ -26,9 +27,36 @@
     </div>
 </div>
 
-@if(Model.AgencyUser.RoleId == "QA_advisor")
+@if (Model.AgencyUser.RoleId == "QA_advisor")
 {
-    @Html.Partial("_DashboardVacancySummaries", Model.VacancySummaries)
+    <h2 class="heading-medium">
+        Review vacancies
+    </h2>
+
+    <div class="grid-wrapper">
+        <div class="grid grid-1-1">
+            <nav class="tabbed-nav">
+                @{
+                    var reviewTabControlClass = Model.VacancySummaries.SearchViewModel.Mode == DashboardVacancySummariesMode.Review ? " active" : "";
+                    var metricsTabControlClass = Model.VacancySummaries.SearchViewModel.Mode == DashboardVacancySummariesMode.Metrics ? " active" : "";
+                }
+                @Html.RouteLink("All vacancies", ManagementRouteNames.Dashboard, new DashboardVacancySummariesSearchViewModel(Model.VacancySummaries.SearchViewModel, DashboardVacancySummariesMode.Review), new {@class = "tabbed-tab no-js" + reviewTabControlClass})
+                @Html.RouteLink("All teams", ManagementRouteNames.Dashboard, new DashboardVacancySummariesSearchViewModel(Model.VacancySummaries.SearchViewModel, DashboardVacancySummariesMode.Metrics), new {@class = "tabbed-tab no-js" + metricsTabControlClass})
+            </nav>
+        </div>
+    </div>
+
+    <div class="tabbed-content active width-all-1-1">
+        @if (Model.VacancySummaries.SearchViewModel.Mode == DashboardVacancySummariesMode.Review)
+        {
+            @Html.Partial("_DashboardVacancyCounts", Model.VacancySummaries)
+            @Html.Partial("_DashboardVacancySummaries", Model.VacancySummaries)
+        }
+        @if(Model.VacancySummaries.SearchViewModel.Mode == DashboardVacancySummariesMode.Metrics)
+        {
+            @Html.Partial("_DashboardTeamMetrics", Model.VacancySummaries.RegionalTeamsMetrics)
+        }
+    </div>
 }
 
 @if(Model.AgencyUser.RoleId == "Helpdesk_advisor")
