--- a/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
@@ -69,7 +69,7 @@
             }
             @if(Model.VacancySummaries.SearchViewModel.Mode == DashboardVacancySummariesMode.Metrics)
             {
-                @Html.Partial("_DashboardTeamMetrics", Model.VacancySummaries.RegionalTeamsMetrics)
+                @Html.Partial("_DashboardTeamMetrics", Model)
             }
         </div>
     }
