us897: initial wage type mapping (wip).

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Details.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Details.cshtml
@@ -63,6 +63,7 @@
             <div class="grid grid-1-3">
                 <div class="inner-block-padr">
                     <h3 class="bold-small">@Model.WageUnit.GetHeaderDisplayText()</h3>
+                    <p id="vacancy-wage">@Model.WageType</p>
                     <p id="vacancy-wage">@Model.Wage</p>
 
                     <h3 class="bold-small">Working week</h3>
