--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Details.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Details.cshtml
@@ -1,5 +1,7 @@
 ﻿@using SFA.Apprenticeships.Domain.Entities.Vacancies.Apprenticeships
+
 @model ApprenticeshipVacancyDetailViewModel
+
 @{
     ViewBag.Title = Model.Title + " - Find an apprenticeship";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -62,18 +64,21 @@
             <h2 class="heading-large">Apprenticeship summary</h2>
             <div class="grid grid-1-3">
                 <div class="inner-block-padr">
-                    <h3 class="bold-small">@Model.WageUnit.GetHeaderDisplayText()</h3>
-                    <p id="vacancy-wage">@Model.WageType</p>
-                    <p id="vacancy-wage">@Model.Wage</p>
+
+                    @Html.Partial("_wage", Model)
 
                     <h3 class="bold-small">Working week</h3>
                     <p id="vacancy-working-week" itemprop="workHours">@Model.WorkingWeek</p>
+
                     <h3 class="bold-small">Apprenticeship duration</h3>
                     <p id="vacancy-expected-duration">@(string.IsNullOrWhiteSpace(@Model.ExpectedDuration) ? "Not specified" : @Model.ExpectedDuration)</p>
+
                     <h3 class="bold-small">Possible start date</h3>
                     <p id="vacancy-start-date">@Html.DisplayFor(m => Model.StartDate)</p>
+
                     <h3 class="bold-small">Date posted</h3>
                     <p id="vacancy-posted-date">@Model.PostedDate.ToFriendlyDaysAgo()</p>
+
                     @if (Model.VacancyLocationType != ApprenticeshipLocationType.National && Model.Distance != null)
                     {
                         <h3 class="bold-small">Distance</h3>
@@ -84,7 +89,7 @@
 
                     <h3 class="bold-small">Reference number</h3>
                     <p id="vacancy-reference-id">@Model.VacancyReference</p>
-                    
+
                     @if (Model.VacancyLocationType != ApprenticeshipLocationType.National)
                     {
                         <h3 class="bold-small">Positions</h3>
