us897: all wage types (except legacy text) supported in FAA.

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/_wage.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/_wage.cshtml
@@ -5,27 +5,8 @@
 
 <div>
     <h3 class="bold-small">@Model.WageUnit.GetHeaderDisplayText()</h3>
-    <p id="vacancy-wage">TODO: @Model.WageType</p>
-    <p id="vacancy-wage">@Model.Wage</p>
-
-    <h3 class="bold-small">
-        @if (Model.WageType == LegacyWageType.Custom)
-        {
-            <span>
-                @* @Model.WageUnitDisplayText *@
-                TBD1
-            </span>
-        }
-        else
-        {
-            <span>
-                Weekly wage
-            </span>
-        }
-    </h3>
     <p id="vacancy-wage">
-        @* @Model.WageDisplayText *@
-        TBD1
+        @Model.Wage
     </p>
 </div>
 
