--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/TrainingDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/TrainingDetails.cshtml
@@ -182,7 +182,7 @@
     </div>
 
     <div class="form-group">
-        <h3 class="heading-small">Contact details for candidate</h3>
+        <h3 class="heading-small">Contact details</h3>
 
         @Html.FormTextFor(
             m => m.ContactName,
