--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Review.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Review.cshtml
@@ -18,7 +18,7 @@
         <section>
             <div class="form-group">
                 <button id="btnApprove" type="submit" class="button" name="VacancyQAAction" value="Approve">Approve and continue to next vacancy</button>
-                <button id="btnReject" type="submit" class="button-link" name="VacancyQAAction" value="Reject">Refer</button>
+                <button id="btnReject" type="submit" class="button-link" name="VacancyQAAction" value="Reject">Refer and continue to next vacancy</button>
                 <button id="btnUnReserve" type="submit" class="button-link" name="VacancyQAAction" value="UnReserveForQA">Agency home</button>
             </div>
         </section>
