--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Details.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@using SFA.Apprenticeships.Domain.Entities.Vacancies.Apprenticeships
+﻿@using SFA.Apprenticeships.Domain.Entities.Vacancies
+@using SFA.Apprenticeships.Domain.Entities.Vacancies.Apprenticeships
 
 @model ApprenticeshipVacancyDetailViewModel
 
@@ -229,7 +230,14 @@
                         {
                             <p id="vacancy-training-to-be-provided">@Html.Raw(Model.TrainingToBeProvided)</p>
                         }
-                        <h3 class="heading-small">Apprenticeship framework</h3>
+                        @if (Model.TrainingType == TrainingType.Standards)
+                        {
+                            <h3 class="heading-small">Apprenticeship standard</h3>
+                        }
+                        else
+                        {
+                            <h3 class="heading-small">Apprenticeship framework</h3>
+                        }
                         <p id="vacancy-framework">@Html.Raw(Model.SubCategory)</p>
                         @if (Model.ProviderSectorPassRate > 0)
                         {
